# cars_vue_js

./: .gitignore  .htaccess  BACKUP_README.md  HTTPS_SETUP.md  HTTPS_TEST.md  I18N_SETUP.md  PRODUCTION_HTTPS_SETUP.md  QUICK_START.md  README.md  algerian_addresses.json  api_test.html  backup_monitor.scpt  backup_script.sh  com.merhab.backup.monitor.plist  db.sql  debug_api.js  dev.sh  duplicate_vin_query.sql  excel_20260214_172232_485_59b5.xlsx  excel_20260214_172253_522_5fe9.xlsx  excel_template_test_output.xlsx  find_api_path.html  generate-ssl.sh  index.html  localhost-key.pem  localhost.pem  open_backup_website.scpt  package-lock.json  package.json  remove_purchase_bill.sql  server.php  setup_backup_autostart.sh  setup_backup_monitor.sh  setup_backup_monitor_advanced.sh  test.html  test_api.html  test_api_fix.html  test_cross_domain_api.html  update_batch_cars.sql  vite.config.js
api/: .htaccess  add_new_tables.php  add_test_containers.php  api.php  api.php alias  backup.php  backup_simple_web.php  backup_test.php  config.php  db_manager_api.php  db_manager_config.php  db_manager_config.php.example  drop_all_tables.sql  export.sql  hash_generator.html  install.php  invitations.php  migrate_cfr_da.php  migrate_chat_last_read_message_unique.php  migrate_date_on_board.php  php.ini  recreate_selection_tables.sql  remove_purchase_bill.php  setup.sql  test.php  update_batch_cars.php  upload.php  upload_client_id.php
backups/: auto_backup_2025-08-07_18-40-50.sql  auto_backup_2025-08-07_18-43-59.sql  auto_backup_2025-08-07_18-48-07.sql  auto_backup_2025-08-07_18-49-08.sql  auto_backup_2025-08-07_18-50-59.sql  auto_backup_2025-08-07_18-51-59.sql  auto_backup_2025-08-07_19-01-57.sql  auto_backup_2025-08-07_19-02-57.sql  auto_backup_2025-08-07_19-04-02.sql  auto_backup_2025-08-07_19-08-48.sql  auto_backup_2025-08-07_19-10-20.sql  auto_backup_log.txt  last_auto_backup.txt  merhab_cars_backup_2025-08-07_17-53-28.sql  merhab_cars_backup_2025-08-08_01-52-58.sql
cross_dev/: BUILD_WINDOWS.md  CMakeLists.txt  COMPONENT_SYSTEM.md  IMPLEMENTATION_STATUS.md  README.md  TODO_COMPONENT_SYSTEM.md  TODO_SETTINGS_EDITOR.md  crossdev_preload.js  demo.html  excel_20260214_172142_002_bdb7.xlsx
mig/: .htaccess  CarsStock.C3ImC6Xf.css  CarsStock.C3J1zlI5.js  CarsStock.C3J1zlI5.js.map  CarsStock.CUGVvKds.js  CarsStock.CUGVvKds.js.map  CarsStock.CUjBNyyB.css  CarsStock.CVAW-SBr.js  CarsStock.CVAW-SBr.js.map  CarsStock.D77qjUHz.css  CarsStock.DEpmF45H.js  CarsStock.DEpmF45H.js.map  CarsView.4LyWpsaN.js  CarsView.4LyWpsaN.js.map  CarsView.BHaueE2N.css  CarsView.CRpM39Ne.css  CarsView.CyzgtemI.js  CarsView.CyzgtemI.js.map  CarsView.DI2XyvFR.css  CarsView.DtNDxllF.css  CarsView.e-wYV0u3.js  CarsView.e-wYV0u3.js.map  CarsView.txb5TwOG.js  CarsView.txb5TwOG.js.map  CashierView.BT51dvzK.css  CashierView.COvpkH4-.js  CashierView.COvpkH4-.js.map  CashierView.DG9y1jRq.js  CashierView.DG9y1jRq.js.map  CashierView.DTLxCbVW.js  (+88 more)
sqlite_direct_minimal/: CMakeLists.txt  README.md  STATIC_LINKING.md  sqlite_client.cpp  sqlite_client.h  sqlite_prepared_statement.cpp  sqlite_prepared_statement.h  sqlite_resultset.cpp  sqlite_resultset.h  test_sqlite.cpp
sqlite_direct_minimal/examples/: basic_usage.cpp  create_massive_db.cpp
(+411 files in other folders)
